[package]
name = "p25rx"
version = "1.0.2"
authors = ["Mick Koch <mick@kochm.co>", "Mark Tomlin <Dygear@gmail.com>"]
license = "GPLv2"

[dependencies]

arrayvec = "0.7.2"
chrono = "0.4.22"
clap = "3.2.17"
collect_slice = "1.2.0"
demod_fm = {version = "1.0.1", git = "https://github.com/Dygear/demod_fm.rs"}
env_logger = "0.9.0"
fnv = "1.0.7"
libc = "0.2.132"
log = "0.4.17"
mio = "0.6.12"
mio-more = "0.1.0"
moving_avg = "0.2.0"
num = "0.4.0"
rand = "0.3.13"
rtlsdr_iq = "0.1.0"
rtlsdr_mt = "2.0.0"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
slice_mip = "1.0.0"
uhttp_chunked_write = "0.5.0"
uhttp_json_api = {version = "0.6.3", git = "https://github.com/Dygear/uhttp_json_api.rs"}
uhttp_method = "0.10.0"
uhttp_response_header = "0.5.0"
uhttp_sse = "0.5.1"
uhttp_status = "0.10.0"
uhttp_uri = "0.5.1"
uhttp_version = {version = "0.6.1", git = "https://github.com/Dygear/uhttp_version.rs.git"}

static_fir = {version = "1.0.2",  git = "https://github.com/Dygear/static_fir.rs" }
imbe = {version = "1.0.1", git = "https://github.com/Dygear/imbe.rs"}
p25 = {version = "1.0.3", git = "https://github.com/Dygear/p25.rs", features = ["ser"]}
p25_filts = {version = "1.0.2", git = "https://github.com/Dygear/p25_filts.rs"}
pool = {version = "0.1.3", git = "https://github.com/kchmck/pool"}
static_decimate = {version = "1.0.1", git = "https://github.com/Dygear/static_decimate.rs"}
throttle = {version = "1.0.0", git = "https://github.com/kchmck/throttle.rs"}

[profile.release]
panic = "abort"
